test/integration/manifests/cilium/v1.17/ebpf/common/allowed-iptables-patterns.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: allowed-iptables-patterns
  namespace: kube-system
data:
  filter: |
    -A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 32526 -j DROP
    -A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 80 -j DROP
    -A INPUT -p udp --dport 68 -j ACCEPT
  global: |
    ^-N .*
    ^-P .*
    ^-A (KUBE-FIREWALL) .*

    ^-A .* -j (KUBE-FIREWALL)
    ^-A IP-MASQ-AGENT
    ^-A .* -j IP-MASQ-AGENT
    
    ^.*--comment.*cilium:
    ^.*--comment.*cilium-feeder:
    ^.*--comment.*AKS managed: added by AgentBaker
  mangle: |
    -A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 80 -j DROP
    -A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 32526 -j DROP
  nat: |
    -A POSTROUTING -j SWIFT
    -A SWIFT -s
    -A POSTROUTING -j SWIFT-POSTROUTING
    -A SWIFT-POSTROUTING -s
  raw: |
    ^-A (PREROUTING|OUTPUT) -d 169\.254\.10\.(10|11)\/32 -p (tcp|udp) -m comment --comment "localdns: skip conntrack" -m (tcp|udp) --dport 53 -j NOTRACK$
  security: |
    -A OUTPUT -d 168.63.129.16/32 -p tcp -m tcp --dport 53 -j ACCEPT
    -A OUTPUT -d 168.63.129.16/32 -p tcp -m owner --uid-owner 0 -j ACCEPT
    -A OUTPUT -d 168.63.129.16/32 -p tcp -m conntrack --ctstate INVALID,NEW -j DROP
